released v0.4.5 - fixed spacing around h1 and byline

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -178,7 +178,6 @@ h1 {
   line-height: 0.8em;
   letter-spacing: -0.07em;
   font-weight: 400;
-  margin-bottom: 2.5rem;
 }
 
 h2, h3 {
